--- a/index.html
+++ b/index.html
@@ -5,16 +5,13 @@
         <title>Calculator Playground</title>
     </head>
     <body >
-        <div class="operation">
+        <form id="operation-form">
             <select id="operation-select">
                 <option value="add" selected>Add</option>
                 <option value="sub" >Sub</option>
                 <option value="div">Div</option>
                 <option value="mul">Mul</option>
-            </select>
-        </div>
-        <br>
-        <form action="">
+            </select> <br><br>
             <label for="first-number">First number:</label><br>
             <input type="text" id="first-number" name="first-number" value="0">
             <label id="symbol-operation">+</label><br>
@@ -22,7 +19,13 @@
             <input type="text" id="second-number" name="second-number" value="0"><br><br>
             <input type="submit" value="Go!">
         </form>
+        <br>
+        <div>
+            <label>Result:</label><br>
+            <label id='result'>---</label>
+        </div>
         
-        <script src="js/app.js"></script>
+        <script src="js/math.js"></script>
+        <script src="js/app.js"></script>        
     </body>
 </html>
