Style: Button now says execute

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <label id="symbol-operation">+</label><br>
             <label for="second-number">Second number:</label><br>
             <input type="text" id="second-number" name="second-number" value="0"><br><br>
-            <input type="submit" value="Go!">
+            <input type="submit" value="Execute!">
         </form>
         <br>
         <div>
