Feat: Add odd number to list

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
                 <option value="sub" >Sub</option>
                 <option value="div">Div</option>
                 <option value="mul">Mul</option>
+                <option value="odd">Odd</option>
             </select> <br><br>
             <label for="first-number">First number:</label><br>
             <input type="text" id="first-number" name="first-number" value="0">
